Update html docs

--- a/TBTPTerms.html
+++ b/TBTPTerms.html
@@ -2,248 +2,38 @@
 
 <head>
 <meta http-equiv=Content-Type content="text/html; charset=windows-1252">
-<meta name=Generator content="Microsoft Word 15 (filtered)">
-<style>
-<!--
- /* Font Definitions */
- @font-face
-	{font-family:"Cambria Math";
-	panose-1:2 4 5 3 5 4 6 3 2 4;}
-@font-face
-	{font-family:Calibri;
-	panose-1:2 15 5 2 2 2 4 3 2 4;}
- /* Style Definitions */
- p.MsoNormal, li.MsoNormal, div.MsoNormal
-	{margin-top:0in;
-	margin-right:0in;
-	margin-bottom:8.0pt;
-	margin-left:0in;
-	line-height:107%;
-	font-size:11.0pt;
-	font-family:"Calibri","sans-serif";}
-h1
-	{mso-style-link:"Titre 1 Car";
-	margin-right:0in;
-	margin-left:0in;
-	font-size:24.0pt;
-	font-family:"Times New Roman","serif";
-	font-weight:bold;}
-h2
-	{mso-style-link:"Titre 2 Car";
-	margin-right:0in;
-	margin-left:0in;
-	font-size:18.0pt;
-	font-family:"Times New Roman","serif";
-	font-weight:bold;}
-a:link, span.MsoHyperlink
-	{color:blue;
-	text-decoration:underline;}
-a:visited, span.MsoHyperlinkFollowed
-	{color:#954F72;
-	text-decoration:underline;}
-p
-	{margin-right:0in;
-	margin-left:0in;
-	font-size:12.0pt;
-	font-family:"Times New Roman","serif";}
-span.Titre1Car
-	{mso-style-name:"Titre 1 Car";
-	mso-style-link:"Titre 1";
-	font-family:"Times New Roman","serif";
-	font-weight:bold;}
-span.Titre2Car
-	{mso-style-name:"Titre 2 Car";
-	mso-style-link:"Titre 2";
-	font-family:"Times New Roman","serif";
-	font-weight:bold;}
-.MsoChpDefault
-	{font-family:"Calibri","sans-serif";}
-.MsoPapDefault
-	{margin-bottom:8.0pt;
-	line-height:107%;}
-@page WordSection1
-	{size:8.5in 11.0in;
-	margin:1.0in 1.0in 1.0in 1.0in;}
-div.WordSection1
-	{page:WordSection1;}
--->
-</style>
 
 </head>
 
-<body lang=EN-US link=blue vlink="#954F72">
-
-<div class=WordSection1>
-
-<h1 align=center style='text-align:center'>Terms of Use of TBTP Chauffeur</h1>
-
-<p class=MsoNormal style='margin-bottom:0in;margin-bottom:.0001pt;line-height:
-normal'><span style='font-family:"Times New Roman","serif";color:#333333'><br>
-<br>
-</span></p>
-
-<p class=MsoNormal style='margin-bottom:15.0pt;line-height:normal;background:
-white'><b><span style='font-family:"Times New Roman","serif";color:#333333'>PLEASE
-READ THE FOLLOWING TERMS AND CONDITIONS OF USE CAREFULLY BEFORE USING THIS APP.</span></b></p>
-
-<p class=MsoNormal style='margin-bottom:15.0pt;line-height:normal;background:
-white'><span style='font-family:"Times New Roman","serif";color:#333333'>All
-users of this TBTP Chauffeur agree that access to and use of this app is
-subject to the following terms and conditions and other applicable law. If you
-do not agree to these terms and conditions, please do not use this app.</span></p>
-
+<body>
+	<h1 style="text-align: center;"><strong>Terms of Use of TBTP Chauffeur</strong></h1>
+<p style="text-align: center;">&nbsp;</p>
+<p><strong>PLEASE READ THE FOLLOWING TERMS AND CONDITIONS OF USE CAREFULLY BEFORE USING THIS APP.</strong></p>
+<p>All users of this TBTP Chauffeur agree that access to and use of this app is subject to the following terms and conditions and other applicable law. If you do not agree to these terms and conditions, please do not use this app.</p>
 <h2>Disclaimer</h2>
-
-<p class=MsoNormal style='margin-bottom:15.0pt;line-height:normal;background:
-white'><span style='font-family:"Times New Roman","serif";color:#333333'>You
-understand that it is your responsibility to ensure that the photo you create
-is complete, accurate, and meets your company’s specific needs. TBTP Chauffeur
-is not liable or responsible for any photo created and sent using our App, and
-we give no representations or warranties, express or implied, that the photos
-created using our app are accepted by the TBTP company.</span></p>
-
-<p class=MsoNormal style='margin-bottom:15.0pt;line-height:normal;background:
-white'><b><span style='font-family:"Times New Roman","serif";color:#333333'>TBTP
-Chauffeur is made only for the TBTP SA drivers</span></b><span
-style='font-family:"Times New Roman","serif";color:#333333'> who are over 18
-years old. If you are not a TBTP SA driver, please do not use this app. If you
-become aware of any other user, who is not a TBTP SA Driver using this app,
-please contact us at </span><a href="mailto:tbtpsa@gmail.com"><span
-style='font-family:"Times New Roman","serif"'>tbtpsa@gmail.com</span></a><span
-style='font-family:"Times New Roman","serif";color:#333333'> immediately.</span></p>
-
+<p>You understand that it is your responsibility to ensure that the photo you create is complete, accurate, and meets your company&rsquo;s specific needs. TBTP Chauffeur is not liable or responsible for any photo created and sent using our App, and we give no representations or warranties, express or implied, that the photos created using our app are accepted by the TBTP company.</p>
+<p><strong>TBTP Chauffeur is made only for the TBTP SA drivers</strong> who are over 18 years old. If you are not a TBTP SA driver, please do not use this app. If you become aware of any other user, who is not a TBTP SA Driver using this app, please contact us at <a href="mailto:tbtpsa@gmail.com">tbtpsa@gmail.com</a> immediately.</p>
 <h2>Guarantees</h2>
-
-<p class=MsoNormal style='margin-bottom:15.0pt;line-height:normal;background:
-white'><span style='font-family:"Times New Roman","serif";color:#333333'>TBTP
-Chauffeur offers no guarantees that the photos you send using your device are
-accurate, clear, or meets the specific needs of TBTP SA. It is your
-responsibility to make sure that the photos you send to the company meets the
-specific needs of TBTP SA.</span></p>
-
+<p>TBTP Chauffeur offers no guarantees that the photos you send using your device are accurate, clear, or meets the specific needs of TBTP SA. It is your responsibility to make sure that the photos you send to the company meets the specific needs of TBTP SA.</p>
 <h2>Warranty Disclaimer</h2>
-
-<p class=MsoNormal style='margin-bottom:15.0pt;line-height:normal;background:
-white'><span style='font-family:"Times New Roman","serif";color:#333333'>This app
-and the materials and products on this app are provided &quot;as is&quot; and
-without warranties of any kind, whether express or implied. To the fullest
-extent permissible pursuant to applicable law, TBTP Chauffeur disclaims all
-warranties, express or implied, including, but not limited to, implied
-warranties of merchantability and fitness for a particular purpose and
-non-infringement. TBTP Chauffeur does not represent or warrant that the
-functions contained in the app will be uninterrupted or error-free, that the
-defects will be corrected, or that this app or the server that makes the app
-available are free of viruses or other harmful components. TBTP Chauffeur does
-not make any warrantees or representations regarding the use of the materials
-in this app in terms of their correctness, accuracy, adequacy, usefulness,
-timeliness, reliability or otherwise. Some states do not permit limitations or
-exclusions on warranties, so the above limitations may not apply to you.</span></p>
-
-<p class=MsoNormal style='margin-bottom:15.0pt;line-height:normal;background:
-white'><span style='font-family:"Times New Roman","serif";color:#333333'>&nbsp;</span></p>
-
-<p class=MsoNormal style='margin-bottom:15.0pt;line-height:normal;background:
-white'><span style='font-family:"Times New Roman","serif";color:#333333'>&nbsp;</span></p>
-
+<p>This app and the materials and products on this app are provided "as is" and without warranties of any kind, whether express or implied. To the fullest extent permissible pursuant to applicable law, TBTP Chauffeur disclaims all warranties, express or implied, including, but not limited to, implied warranties of merchantability and fitness for a particular purpose and non-infringement. TBTP Chauffeur does not represent or warrant that the functions contained in the app will be uninterrupted or error-free, that the defects will be corrected, or that this app or the server that makes the app available are free of viruses or other harmful components. TBTP Chauffeur does not make any warrantees or representations regarding the use of the materials in this app in terms of their correctness, accuracy, adequacy, usefulness, timeliness, reliability or otherwise. Some states do not permit limitations or exclusions on warranties, so the above limitations may not apply to you.</p>
 <h2>Limitation of Liability</h2>
-
-<p class=MsoNormal style='margin-bottom:15.0pt;line-height:normal;background:
-white'><span style='font-family:"Times New Roman","serif";color:#333333'>TBTP
-Chauffeur shall not be liable for any special or consequential damages that
-result from the use of, or the inability to use, the services and products
-offered on this app, or the performance of the services and products.</span></p>
-
+<p>TBTP Chauffeur shall not be liable for any special or consequential damages that result from the use of, or the inability to use, the services and products offered on this app, or the performance of the services and products.</p>
 <h2>Termination</h2>
-
-<p class=MsoNormal style='margin-bottom:15.0pt;line-height:normal;background:
-white'><span style='font-family:"Times New Roman","serif";color:#333333'>These
-terms and conditions are applicable to you upon your accessing the app and/or using
-it. These terms and conditions, or any part of them, may be terminated by TBTP
-Chauffeur without notice at any time, for any reason. The provisions relating
-to Copyrights, Trademark, Disclaimer, Limitation of Liability, Indemnification
-and Miscellaneous, shall survive any termination.</span></p>
-
+<p>These terms and conditions are applicable to you upon your accessing the app and/or using it. These terms and conditions, or any part of them, may be terminated by TBTP Chauffeur without notice at any time, for any reason. The provisions relating to Copyrights, Trademark, Disclaimer, Limitation of Liability, Indemnification and Miscellaneous, shall survive any termination.</p>
 <h2>Use of App</h2>
-
-<p class=MsoNormal style='margin-bottom:15.0pt;line-height:normal;background:
-white'><span style='font-family:"Times New Roman","serif";color:#333333'>You
-may not upload to, distribute, or otherwise publish through the TBTP Chauffeur 
-App any content which is libelous, defamatory, obscene, threatening, invasive
-of privacy or publicity rights, abusive, illegal, or otherwise objectionable
-which may constitute or encourage a criminal offense, violate the rights of any
-party or which may otherwise give rise to liability or violate any law. </span></p>
-
+<p>You may not upload to, distribute, or otherwise publish through the TBTP Chauffeur App any content which is libelous, defamatory, obscene, threatening, invasive of privacy or publicity rights, abusive, illegal, or otherwise objectionable which may constitute or encourage a criminal offense, violate the rights of any party or which may otherwise give rise to liability or violate any law.</p>
 <h2>Participation Disclaimer</h2>
-
-<p class=MsoNormal style='margin-bottom:15.0pt;line-height:normal;background:
-white'><span style='font-family:"Times New Roman","serif";color:#333333'>TBTP
-Chauffeur does not and cannot review all materials posted to or created by
-users accessing the app, and are not in any manner responsible for the content
-of these materials. You acknowledge that by providing you with the ability to
-view and distribute user-generated content on the app, TBTP Chauffeur is merely
-acting as a passive conduit for such distribution and is not undertaking any
-obligation or liability relating to any contents or activities on the app.
-However, TBTP Chauffeur  reserves the right to block or remove materials that
-it determines to be (a) abusive, defamatory, or obscene, (b) fraudulent,
-deceptive, or misleading, (c) in violation of a copyright, trademark or; other
-intellectual property right of another or (d) offensive or otherwise
-unacceptable to TBTP Chauffeur in its sole discretion.</span></p>
-
+<p>TBTP Chauffeur does not and cannot review all materials posted to or created by users accessing the app, and are not in any manner responsible for the content of these materials. You acknowledge that by providing you with the ability to view and distribute user-generated content on the app, TBTP Chauffeur is merely acting as a passive conduit for such distribution and is not undertaking any obligation or liability relating to any contents or activities on the app. However, TBTP Chauffeur reserves the right to block or remove materials that it determines to be (a) abusive, defamatory, or obscene, (b) fraudulent, deceptive, or misleading, (c) in violation of a copyright, trademark or; other intellectual property right of another or (d) offensive or otherwise unacceptable to TBTP Chauffeur in its sole discretion.</p>
 <h2>Indemnification</h2>
-
-<p class=MsoNormal style='margin-bottom:15.0pt;line-height:normal;background:
-white'><span style='font-family:"Times New Roman","serif";color:#333333'>You
-agree to indemnify, defend, and hold harmless TBTP Chauffeur  App and its developer
-from and against all losses, expenses, damages and costs, including reasonable
-attorneys' fees, resulting from any violation of these terms and conditions or
-any activity related to your account (including negligent or wrongful conduct)
-by you or any other person accessing the TBTP Chauffeur  App using your
-Internet account.</span></p>
-
-<p class=MsoNormal style='margin-bottom:15.0pt;line-height:normal;background:
-white'><span style='font-family:"Times New Roman","serif";color:#333333'>&nbsp;</span></p>
-
-<p class=MsoNormal style='margin-bottom:15.0pt;line-height:normal;background:
-white'><span style='font-family:"Times New Roman","serif";color:#333333'>&nbsp;</span></p>
-
-<p class=MsoNormal style='margin-bottom:15.0pt;line-height:normal;background:
-white'><span style='font-family:"Times New Roman","serif";color:#333333'>&nbsp;</span></p>
-
+<p>You agree to indemnify, defend, and hold harmless TBTP Chauffeur App and its developer from and against all losses, expenses, damages and costs, including reasonable attorneys' fees, resulting from any violation of these terms and conditions or any activity related to your account (including negligent or wrongful conduct) by you or any other person accessing the TBTP Chauffeur App using your Internet account.</p>
 <h2>Third-Party Links</h2>
-
-<p class=MsoNormal style='margin-bottom:15.0pt;line-height:normal;background:
-white'><span style='font-family:"Times New Roman","serif";color:#333333'>In an
-attempt to provide increased value to our users, TBTP Chauffeur may link to
-sites/apps operated by third parties. However, even if the third party is
-affiliated with TBTP Chauffeur App, TBTP Chauffeur has no control over these
-linked sites/apps, all of which have separate privacy and data collection
-practices, independent of TBTP Chauffeur. These linked sites/apps are only for
-your convenience and therefore you access them at your own risk. Nonetheless, TBTP
-Chauffeur seeks to protect the integrity of its app and the links placed upon
-it and therefore requests any feedback on not only its own app, but for app it
-links to as well (including if a specific link does not work).</span></p>
-
+<p>In an attempt to provide increased value to our users, TBTP Chauffeur may link to sites/apps operated by third parties. However, even if the third party is affiliated with TBTP Chauffeur App, TBTP Chauffeur has no control over these linked sites/apps, all of which have separate privacy and data collection practices, independent of TBTP Chauffeur. These linked sites/apps are only for your convenience and therefore you access them at your own risk. Nonetheless, TBTP Chauffeur seeks to protect the integrity of its app and the links placed upon it and therefore requests any feedback on not only its own app, but for app it links to as well (including if a specific link does not work).</p>
 <h2>Contacting Us</h2>
-
-<p class=MsoNormal style='margin-bottom:15.0pt;line-height:normal;background:
-white'><span style='font-family:"Times New Roman","serif";color:#333333'>If
-there are any questions regarding this terms of use you may email us at </span><a
-href="mailto:tbtp.chauffeur.app@gmail.com"><span style='font-family:"Times New Roman","serif"'>tbtp.chauffeur.app@gmail.com</span></a><span
-style='font-family:"Times New Roman","serif";color:#333333'> or by post : </span></p>
-
-<p class=MsoNormal style='margin-bottom:15.0pt;line-height:normal;background:
-white'><span style='font-family:"Times New Roman","serif";color:#333333'>13 Rue
-des Entrepreneurs,</span></p>
-
-<p class=MsoNormal style='margin-bottom:15.0pt;line-height:normal;background:
-white'><span style='font-family:"Times New Roman","serif";color:#333333'>95150
-Taverny,</span></p>
-
-<p class=MsoNormal style='margin-bottom:15.0pt;line-height:normal;background:
-white'><span style='font-family:"Times New Roman","serif";color:#333333'>France</span></p>
-
-</div>
-
+<p>If there are any questions regarding this terms of use you may email us at <a href="mailto:tbtp.chauffeur.app@gmail.com">tbtp.chauffeur.app@gmail.com</a> or by post :</p>
+<p>13 Rue des Entrepreneurs,</p>
+<p>95150 Taverny,</p>
+<p>France</p>
 </body>
 
 </html>
