--- a/TBTPTerms.html
+++ b/TBTPTerms.html
@@ -6,34 +6,45 @@
 </head>
 
 <body>
-	<h1 style="text-align: center;"><strong>Terms of Use of TBTP Chauffeur</strong></h1>
-<p style="text-align: center;">&nbsp;</p>
-<p><strong>PLEASE READ THE FOLLOWING TERMS AND CONDITIONS OF USE CAREFULLY BEFORE USING THIS APP.</strong></p>
-<p>All users of this TBTP Chauffeur agree that access to and use of this app is subject to the following terms and conditions and other applicable law. If you do not agree to these terms and conditions, please do not use this app.</p>
-<h2>Disclaimer</h2>
-<p>You understand that it is your responsibility to ensure that the photo you create is complete, accurate, and meets your company&rsquo;s specific needs. TBTP Chauffeur is not liable or responsible for any photo created and sent using our App, and we give no representations or warranties, express or implied, that the photos created using our app are accepted by the TBTP company.</p>
-<p><strong>TBTP Chauffeur is made only for the TBTP SA drivers</strong> who are over 18 years old. If you are not a TBTP SA driver, please do not use this app. If you become aware of any other user, who is not a TBTP SA Driver using this app, please contact us at <a href="mailto:tbtpsa@gmail.com">tbtpsa@gmail.com</a> immediately.</p>
-<h2>Guarantees</h2>
-<p>TBTP Chauffeur offers no guarantees that the photos you send using your device are accurate, clear, or meets the specific needs of TBTP SA. It is your responsibility to make sure that the photos you send to the company meets the specific needs of TBTP SA.</p>
 <h2>Warranty Disclaimer</h2>
-<p>This app and the materials and products on this app are provided "as is" and without warranties of any kind, whether express or implied. To the fullest extent permissible pursuant to applicable law, TBTP Chauffeur disclaims all warranties, express or implied, including, but not limited to, implied warranties of merchantability and fitness for a particular purpose and non-infringement. TBTP Chauffeur does not represent or warrant that the functions contained in the app will be uninterrupted or error-free, that the defects will be corrected, or that this app or the server that makes the app available are free of viruses or other harmful components. TBTP Chauffeur does not make any warrantees or representations regarding the use of the materials in this app in terms of their correctness, accuracy, adequacy, usefulness, timeliness, reliability or otherwise. Some states do not permit limitations or exclusions on warranties, so the above limitations may not apply to you.</p>
-<h2>Limitation of Liability</h2>
-<p>TBTP Chauffeur shall not be liable for any special or consequential damages that result from the use of, or the inability to use, the services and products offered on this app, or the performance of the services and products.</p>
-<h2>Termination</h2>
-<p>These terms and conditions are applicable to you upon your accessing the app and/or using it. These terms and conditions, or any part of them, may be terminated by TBTP Chauffeur without notice at any time, for any reason. The provisions relating to Copyrights, Trademark, Disclaimer, Limitation of Liability, Indemnification and Miscellaneous, shall survive any termination.</p>
-<h2>Use of App</h2>
-<p>You may not upload to, distribute, or otherwise publish through the TBTP Chauffeur App any content which is libelous, defamatory, obscene, threatening, invasive of privacy or publicity rights, abusive, illegal, or otherwise objectionable which may constitute or encourage a criminal offense, violate the rights of any party or which may otherwise give rise to liability or violate any law.</p>
-<h2>Participation Disclaimer</h2>
-<p>TBTP Chauffeur does not and cannot review all materials posted to or created by users accessing the app, and are not in any manner responsible for the content of these materials. You acknowledge that by providing you with the ability to view and distribute user-generated content on the app, TBTP Chauffeur is merely acting as a passive conduit for such distribution and is not undertaking any obligation or liability relating to any contents or activities on the app. However, TBTP Chauffeur reserves the right to block or remove materials that it determines to be (a) abusive, defamatory, or obscene, (b) fraudulent, deceptive, or misleading, (c) in violation of a copyright, trademark or; other intellectual property right of another or (d) offensive or otherwise unacceptable to TBTP Chauffeur in its sole discretion.</p>
-<h2>Indemnification</h2>
-<p>You agree to indemnify, defend, and hold harmless TBTP Chauffeur App and its developer from and against all losses, expenses, damages and costs, including reasonable attorneys' fees, resulting from any violation of these terms and conditions or any activity related to your account (including negligent or wrongful conduct) by you or any other person accessing the TBTP Chauffeur App using your Internet account.</p>
-<h2>Third-Party Links</h2>
-<p>In an attempt to provide increased value to our users, TBTP Chauffeur may link to sites/apps operated by third parties. However, even if the third party is affiliated with TBTP Chauffeur App, TBTP Chauffeur has no control over these linked sites/apps, all of which have separate privacy and data collection practices, independent of TBTP Chauffeur. These linked sites/apps are only for your convenience and therefore you access them at your own risk. Nonetheless, TBTP Chauffeur seeks to protect the integrity of its app and the links placed upon it and therefore requests any feedback on not only its own app, but for app it links to as well (including if a specific link does not work).</p>
-<h2>Contacting Us</h2>
-<p>If there are any questions regarding this terms of use you may email us at <a href="mailto:tbtp.chauffeur.app@gmail.com">tbtp.chauffeur.app@gmail.com</a> or by post :</p>
-<p>13 Rue des Entrepreneurs,</p>
-<p>95150 Taverny,</p>
-<p>France</p>
+
+		<h2>TBTP SA Terms of Service</h2>
+		<h3>1. Terms</h3>
+		<p>By accessing our app, TBTP Chauffeur, you are agreeing to be bound by these terms of service, all applicable laws and regulations, and agree that you are responsible for compliance with any applicable local laws. If you do not agree with any of these terms, you are prohibited from using or accessing TBTP Chauffeur. The materials contained in TBTP Chauffeur are protected by applicable copyright and trademark law.</p>
+		<h3>2. Use License</h3>
+		<ol type="a">
+		   <li>Permission is granted to temporarily download one copy of TBTP Chauffeur per device for personal, non-commercial transitory viewing only. This is the grant of a license, not a transfer of title, and under this license you may not:
+		   <ol type="i">
+			   <li>modify or copy the materials;</li>
+			   <li>use the materials for any commercial purpose, or for any public display (commercial or non-commercial);</li>
+			   <li>attempt to decompile or reverse engineer any software contained in TBTP Chauffeur;</li>
+			   <li>remove any copyright or other proprietary notations from the materials; or</li>
+			   <li>transfer the materials to another person or "mirror" the materials on any other server.</li>
+		   </ol>
+			</li>
+		   <li>This license shall automatically terminate if you violate any of these restrictions and may be terminated by TBTP SA at any time. Upon terminating your viewing of these materials or upon the termination of this license, you must destroy any downloaded materials in your possession whether in electronic or printed format.</li>
+		</ol>
+		<h3>3. Disclaimer</h3>
+		<ol type="a">
+		   <li>The materials within TBTP Chauffeur are provided on an 'as is' basis. TBTP SA makes no warranties, expressed or implied, and hereby disclaims and negates all other warranties including, without limitation, implied warranties or conditions of merchantability, fitness for a particular purpose, or non-infringement of intellectual property or other violation of rights.</li>
+		   <li>The materials within TBTP Chauffeur are provided for and only for the TBTP SA drivers. If you are not a TBTP SA driver, please do not use this app. If you become aware of any other user, who is not a TBTP SA Driver using this app, please contact us immediately</li>
+		   <li>Further, TBTP SA does not warrant or make any representations concerning the accuracy, likely results, or reliability of the use of the materials on its website or otherwise relating to such materials or on any sites linked to TBTP Chauffeur.</li>
+
+		</ol>
+		<h3>4. Limitations</h3>
+		<p>In no event shall TBTP SA or its suppliers be liable for any damages (including, without limitation, damages for loss of data or profit, or due to business interruption) arising out of the use or inability to use TBTP Chauffeur, even if TBTP SA or a TBTP SA authorized representative has been notified orally or in writing of the possibility of such damage. Because some jurisdictions do not allow limitations on implied warranties, or limitations of liability for consequential or incidental damages, these limitations may not apply to you.</p>
+		<h3>5. Accuracy of materials</h3>
+		<p>The materials appearing in TBTP Chauffeur could include technical, typographical, or photographic errors. TBTP SA does not warrant that any of the materials on TBTP Chauffeur are accurate, complete or current. TBTP SA may make changes to the materials contained in TBTP Chauffeur at any time without notice. However TBTP SA does not make any commitment to update the materials.</p>
+		<h3>6. Links</h3>
+		<p>TBTP SA has not reviewed all of the sites linked to its app and is not responsible for the contents of any such linked site. The inclusion of any link does not imply endorsement by TBTP SA of the site. Use of any such linked website is at the user's own risk.</p>
+		<h3>7. Modifications</h3>
+		<p>TBTP SA may revise these terms of service for its app at any time without notice. By using TBTP Chauffeur you are agreeing to be bound by the then current version of these terms of service.</p>
+		<h3>8. Governing Law</h3>
+		<p>These terms and conditions are governed by and construed in accordance with the laws of France and you irrevocably submit to the exclusive jurisdiction of the courts in that State or location.</p>
+		<h3>9. Contacting Us</h3>
+		<p>If there are any questions regarding this terms of use you may email us at tbtp.chauffeur.app@gmail.com or by post :</p>
+		<p>13 Rue des Entrepreneurs,95150 Taverny, France</p>
+
 </body>
 
 </html>
