--- a/TBTPTerms.html
+++ b/TBTPTerms.html
@@ -48,7 +48,7 @@
          <p><strong>Disclaimer</strong></p>
          <ol type="a">
           <li>The materials within TBTP Chauffeur are provided on an 'as is' basis. I make no warranties, expressed or implied, and hereby disclaims and negates all other warranties including, without limitation, implied warranties or conditions of merchantability, fitness for a particular purpose, or non-infringement of intellectual property or other violation of rights.</li>
-          <li>The materials within TBTP Chauffeur are provided for and only for the TBTP SA drivers. If you are not a TBTP SA driver, please do not use this app. If you become aware of any other user, who is not a TBTP SA Driver using this app, please contact us immediately</li>
+          <li>The materials within TBTP Chauffeur are provided for and only for the TBTP SA drivers. If you are not a TBTP SA driver, please do not use this app. If you become aware of any other user, who is not a TBTP SA Driver using this app, please contact us immediately.</li>
           <li>Further, I do not warrant or make any representations concerning the accuracy, likely results, or reliability of the use of the materials on its website or otherwise relating to such materials or on any sites linked to TBTP Chauffeur.</li>
    
        </ol>
@@ -60,11 +60,6 @@
             notify you of any changes by posting the new Privacy Policy
             on this page. These changes are effective immediately after
             they are posted on this page.
-          </p> <p><strong>Contact Us</strong></p> <p>
-            If you have any questions or suggestions about
-            my Privacy Policy, do not hesitate to contact
-            me at tbtp.chauffeur.app@gmail.com.
-          </p> 
        <p><strong>Limitations</strong></p> 
        <p>
         In no event shall I or my suppliers be liable for any damages (including, without limitation, 
