--- a/TBTPTerms.html
+++ b/TBTPTerms.html
@@ -49,7 +49,7 @@
          <ol type="a">
           <li>The materials within TBTP Chauffeur are provided on an 'as is' basis. I make no warranties, expressed or implied, and hereby disclaims and negates all other warranties including, without limitation, implied warranties or conditions of merchantability, fitness for a particular purpose, or non-infringement of intellectual property or other violation of rights.</li>
           <li>The materials within TBTP Chauffeur are provided for and only for the TBTP SA drivers. If you are not a TBTP SA driver, please do not use this app. If you become aware of any other user, who is not a TBTP SA Driver using this app, please contact us immediately.</li>
-          <li>Further, I do not warrant or make any representations concerning the accuracy, likely results, or reliability of the use of the materials on its website or otherwise relating to such materials or on any sites linked to TBTP Chauffeur.</li>
+          <li>Further, I do not warrant or make any representations concerning the accuracy, likely results, or reliability of the use of the materials on my app or otherwise relating to such materials or on any sites linked to TBTP Chauffeur.</li>
    
        </ol>
        <p><strong>Changes to This Privacy Policy</strong></p> 
@@ -75,12 +75,12 @@
            However I do not make any commitment to update the materials.
       </p> 
       <p><strong>Links</strong></p> <p>
-        I has not reviewed all of the sites linked to its app and is not responsible for the contents of any such
+        I have not reviewed all of the sites linked to my app and is not responsible for the contents of any such
          linked site. The inclusion of any link does not imply endorsement by me of the site.
          Use of any such linked website is at the user's own risk.
     </p> 
     <p><strong>Modifications</strong></p> <p>
-      I may revise these terms of service for its app at any time without notice. 
+      I may revise these terms of service for my app at any time without notice. 
       By using TBTP Chauffeur you are agreeing to be bound by the then current version of these terms of service.
   </p> 
   <p><strong>Governing Law</strong></p> <p>
