--- a/TBTPPRIVACY.html
+++ b/TBTPPRIVACY.html
@@ -71,10 +71,10 @@
                   <br>
                   <p>Cookies are files with a small amount of data that are
                       commonly used as anonymous unique identifiers. These are
-                      sent to your browser from the websites that you visit and
+                      sent to your browser/app from the websites that you visit and
                       are stored on your device's internal memory.</p>
                   <p>
-                      I don't collect anydata leading to your physical identity using cookies. 
+                      I don't collect any data leading to your physical identity using cookies. 
                       In fact, the cookies used by the TBTP Chauffeur app have no information about you, 
                       and used only to establish the connection between you and the TBTP SA server. 
                       And they are destroyed whenever you leave the TBTP Chauffeur App. 
@@ -90,35 +90,11 @@
           </p> <div><p>
               Link to privacy policy of third party service providers
               used by the app
-            </p> <ul><!----><li><a href="https://support.google.com/admob/answer/6128543?hl=en" target="_blank">AdMob</a></li><!----><!----><!----><!----><!----><!----><!----><!----><!----></ul></div> <p><strong>Log Data</strong></p> <p>
-            I want to inform you that whenever
-            you use my Service, in a case of an error in the
-            app I collect data and information (through third
-            party products) on your phone called Log Data. This Log Data
-            may include information such as your device Internet
-            Protocol (“IP”) address, device name, operating system
-            version, the configuration of the app when utilizing
-            my Service, the time and date of your use of the
-            Service, and other statistics.
-          </p><p>
-            This Service does not use these “cookies” explicitly.
-            However, the app may use third party code and libraries that
-            use “cookies” to collect information and improve their
-            services. You have the option to either accept or refuse
-            these cookies and know when a cookie is being sent to your
-            device. If you choose to refuse our cookies, you may not be
-            able to use some portions of this Service.
-          </p> <p><strong>Service Providers</strong></p> <p>
+            </p> <ul><!----><li><a href="https://support.google.com/admob/answer/6128543?hl=en" target="_blank">AdMob</a></li><!----><!----><!----><!----><!----><!----><!----><!----><!----></ul></div><p><strong>Service Providers</strong></p> <p>
             I may employ third-party companies
             and individuals due to the following reasons:
-          </p> <ul><li>To facilitate our Service;</li> <li>To provide the Service on our behalf;</li> <li>To perform Service-related services; or</li> <li>To assist us in analyzing how our Service is used.</li></ul> <p>
-            I want to inform users of this
-            Service that these third parties have access to your
-            Personal Information. The reason is to perform the tasks
-            assigned to them on our behalf. However, they are obligated
-            not to disclose or use the information for any other
-            purpose.
-          </p> <p><strong>Security</strong></p> <p>
+          </p> <ul><li>To facilitate our Service;</li> <li>To provide the Service on our behalf;</li> <li>To perform Service-related services; or</li> <li>To assist us in analyzing how our Service is used.</li></ul>
+           <p><strong>Security</strong></p> <p>
             I value your trust in providing us
             your Personal Information, thus we are striving to use
             commercially acceptable means of protecting it. But remember
