--- a/TBTPTerms.html
+++ b/TBTPTerms.html
@@ -64,20 +64,20 @@
        <p>
         In no event shall I or my suppliers be liable for any damages (including, without limitation, 
         damages for loss of data or profit, or due to business interruption) arising out of the use or inability to use 
-        TBTP Chauffeur, even if I or one of my authorized representative has been notified orally or in writing of 
+        TBTP Chauffeur, even if I or one of my authorized representative have been notified orally or in writing of 
         the possibility of such damage. Because some jurisdictions do not allow limitations on implied warranties, 
         or limitations of liability for consequential or incidental damages, these limitations may not apply to you.
         </p> 
         <p><strong>Accuracy of materials</strong></p> <p>
           The materials appearing in TBTP Chauffeur could include technical, typographical, or photographic errors. 
-          TBTP SA does not warrant that any of the materials on TBTP Chauffeur are accurate, complete or current. 
+          I do not warrant that any of the materials on TBTP Chauffeur are accurate, complete or current. 
           I may make changes to the materials contained in TBTP Chauffeur at any time without notice.
-           However I do not make any commitment to update the materials.
+           However, I do not make any commitment to update the materials.
       </p> 
       <p><strong>Links</strong></p> <p>
-        I have not reviewed all of the sites linked to my app and is not responsible for the contents of any such
-         linked site. The inclusion of any link does not imply endorsement by me of the site.
-         Use of any such linked website is at the user's own risk.
+        I have not reviewed all of the sites linked to my app and I am not responsible for the contents of any such
+         linked site.
+         Use of any such linked website/app is at the user's own risk.
     </p> 
     <p><strong>Modifications</strong></p> <p>
       I may revise these terms of service for my app at any time without notice. 
