--- a/TBTPCOOKIEPOLICY.html
+++ b/TBTPCOOKIEPOLICY.html
@@ -36,7 +36,7 @@
 
         Cookies set by the website owner (in this case, tbtbpsa.com) are called "first party cookies". 
         Cookies set by parties other than the website owner are called "third party cookies". 
-        Third party cookies enable third party features or functionality to be provided on or through the website 
+        Third party cookies enable third party features or functionality to be provided on or through the website/app 
         (e.g. like advertising, interactive content and analytics). The parties that set these third party cookies 
         can recognize your device  when it visits the app.
           </p> 
