--- a/downloadTBTPapp.html
+++ b/downloadTBTPapp.html
@@ -12,12 +12,11 @@
       <div class="row">
         <div class="one-half column">
           <h5 class="">Ad hoc distribution.</h6>
-          <a class="button button-primary" href="itms-services://?action=download-manifest&url=https://www.dropbox.com/s/seyo7sa0wxp0lhs/iTunesMetadata.plist">Download TBTP CHauffeur</a>
+          <a class="button button-primary" href="itms-services://?action=download-manifest&url=https://dl.dropboxusercontent.com/s/wfbs6mm61fae02i/manifest.plist">Download TBTP Ccauffeur</a>
         </div>
       </div>
     </div>
 </div>
-
 
 </body>
 
