--- a/TBTP/TBTPDoc.html
+++ b/TBTP/TBTPDoc.html
@@ -2,7 +2,10 @@
 <!DOCTYPE html>
 <html>
 
-<head></head>
+<head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+</head>
 <body>
 
     <h1 style="text-align: center;">TBTP Chauffeur Documentation</h1>
