--- a/TBTP/TBTPDoc.html
+++ b/TBTP/TBTPDoc.html
@@ -33,7 +33,7 @@
     <img src="https://dl.dropboxusercontent.com/s/kfpj8c5k5z67xpc/6.png" width="30%" height="30%">
     <p>2- Il faut attendre un message de confirmation que vous allez recevoir dans votre adresse mail avant de passer &agrave; l'&eacute;tape suivante. (Maximum 2 jours)</p>
     <p>3- Installation</p>
-    <a href="https://youssefachrafmoussi.github.io/downloadTBTPapp.html">a- Tappez ici pour acc&eacute;der &agrave; la page de t&eacute;l&eacute;chargement de l'application TBTP CHauffeur.</a>
+    <a href="https://youssefachrafmoussi.github.io/downloadTBTPapp.html">a- Tappez ici pour acc&eacute;der &agrave; la page de t&eacute;l&eacute;chargement de l'application TBTP Chauffeur.</a>
     <p>b- Tappez sur T&eacute;l&eacute;charger et installer l'application.</p>
     <img src="https://dl.dropboxusercontent.com/s/q3pilsaky3y5sls/7.png" width="30%" height="30%">
     <p>c- Retourner &agrave; la page d'acceuil de votre iPhone et attendez l'installation de l'application.</p>
