--- a/TBTP/TBTPDoc.html
+++ b/TBTP/TBTPDoc.html
@@ -38,7 +38,7 @@
     <img src="https://dl.dropboxusercontent.com/s/q3pilsaky3y5sls/7.png" width="30%" height="30%">
     <p>c- Retourner &agrave; la page d'acceuil de votre iPhone et attendez l'installation de l'application.</p>
     <img src="https://dl.dropboxusercontent.com/s/8djy8spkv5nwiv8/8.png" width="30%" height="30%">
-    <p>d- L'application a &eacute;t&eacute; bien install&eacute;</p>
+    <p>d- L'application a &eacute;t&eacute; bien install&eacute;e</p>
     <img src="https://dl.dropboxusercontent.com/s/9i5kuy33tl83h0a/9.png" width="30%" height="30%">
 
     <p>&nbsp;</p>
