--- a/TBTP/TBTPDoc.html
+++ b/TBTP/TBTPDoc.html
@@ -36,7 +36,7 @@
     <a href="https://youssefachrafmoussi.github.io/downloadTBTPapp.html">a- Tappez ici pour acc&eacute;der &agrave; la page de t&eacute;l&eacute;chargement de l'application TBTP Chauffeur.</a>
     <p>b- Tappez sur T&eacute;l&eacute;charger et installer l'application.</p>
     <img src="https://dl.dropboxusercontent.com/s/q3pilsaky3y5sls/7.png" width="30%" height="30%">
-    <p>c- Retourner &agrave; la page d'acceuil de votre iPhone et attendez l'installation de l'application.</p>
+    <p>c- Retournez &agrave; la page d'acceuil de votre iPhone et attendez l'installation de l'application.</p>
     <img src="https://dl.dropboxusercontent.com/s/8djy8spkv5nwiv8/8.png" width="30%" height="30%">
     <p>d- L'application a &eacute;t&eacute; bien install&eacute;e</p>
     <img src="https://dl.dropboxusercontent.com/s/9i5kuy33tl83h0a/9.png" width="30%" height="30%">
