--- a/TBTP/TBTPDoc.html
+++ b/TBTP/TBTPDoc.html
@@ -4,7 +4,11 @@
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+<style>
+p {
+  text-align: justify;
+}
+</style>
 </head>
 <body>
 
@@ -16,36 +20,31 @@
     <p>Suivez les &eacute;tapes suivantes pour telecharger et installer l'application TBTP Chauffeur pour iOS :</p>
     <p>1- R&eacute;cup&eacute;rer et envoyer l'identifiant de votre iPhone (UDID) &agrave; l'application :</p>
     <a href="https://get.udid.io/?mail=tbtp.chauffeur.app@gmail.com&uid=tbtp">a- Cliquez ici pour acceder au service de r&eacute;cup&eacute;ration d'UDID</a>
-    <p>b- Tappez sur : Tap to find UDID</p>
-    <img src="https://dl.dropboxusercontent.com/s/944fa3h97xxsmpb/1.png" width="30%" height="30%">
-    <p>c- Tappez sur : Autoriser</p>
-    <img src="https://dl.dropboxusercontent.com/s/io0rz9ieeaot9af/2.png" width="30%" height="30%">
-
-    <p>d- Tappez sur : Installer</p>
-    <img src="https://dl.dropboxusercontent.com/s/uaasl51yu7y64xl/3.png" width="30%" height="30%">
-
-    <p>e- Tappez sur : Installer</p>
-    <img src="https://dl.dropboxusercontent.com/s/nf0r4ce5tqqtuop/4.png" width="30%" height="30%">
-
-    <p>f- Tappez sur : Send UDID via E-mail</p>
-    <img src="https://dl.dropboxusercontent.com/s/q492a7ewkrdhckh/5.png" width="30%" height="30%">
+    <p>b- Tappez sur Tap to find UDID</p>
+    <img src="https://dl.dropboxusercontent.com/s/944fa3h97xxsmpb/1.png" width="50%" height="50%">
+    <p>c- Tappez sur Autoriser</p>
+    <img src="https://dl.dropboxusercontent.com/s/io0rz9ieeaot9af/2.png" width="50%" height="50%">
+    <p>d- Tappez sur Installer</p>
+    <img src="https://dl.dropboxusercontent.com/s/uaasl51yu7y64xl/3.png" width="50%" height="50%">
+    <p>e- Tappez sur Installer</p>
+    <img src="https://dl.dropboxusercontent.com/s/nf0r4ce5tqqtuop/4.png" width="50%" height="50%">
+    <p>f- Tappez sur Send UDID via E-mail</p>
+    <img src="https://dl.dropboxusercontent.com/s/q492a7ewkrdhckh/5.png" width="50%" height="50%">
     <p>g- Envoyez l'UDID &agrave; tbtp.chauffeur.app@gmail.com</p>
-    <img src="https://dl.dropboxusercontent.com/s/kfpj8c5k5z67xpc/6.png" width="30%" height="30%">
+    <img src="https://dl.dropboxusercontent.com/s/kfpj8c5k5z67xpc/6.png" width="50%" height="50%">
     <p>2- Il faut attendre un message de confirmation que vous allez recevoir dans votre adresse mail avant de passer &agrave; l'&eacute;tape suivante. (Maximum 2 jours)</p>
     <p>3- Installation</p>
     <a href="https://youssefachrafmoussi.github.io/downloadTBTPapp.html">a- Tappez ici pour acc&eacute;der &agrave; la page de t&eacute;l&eacute;chargement de l'application TBTP Chauffeur.</a>
     <p>b- Tappez sur T&eacute;l&eacute;charger et installer l'application.</p>
-    <img src="https://dl.dropboxusercontent.com/s/q3pilsaky3y5sls/7.png" width="30%" height="30%">
+    <img src="https://dl.dropboxusercontent.com/s/q3pilsaky3y5sls/7.png" width="50%" height="50%">
     <p>c- Retournez &agrave; la page d'accueil de votre iPhone et attendez l'installation de l'application.</p>
-    <img src="https://dl.dropboxusercontent.com/s/8djy8spkv5nwiv8/8.png" width="30%" height="30%">
+    <img src="https://dl.dropboxusercontent.com/s/8djy8spkv5nwiv8/8.png" width="50%" height="50%">
     <p>d- L'application a &eacute;t&eacute; bien install&eacute;e</p>
-    <img src="https://dl.dropboxusercontent.com/s/9i5kuy33tl83h0a/9.png" width="30%" height="30%">
-
-    <p>&nbsp;</p>
+    <img src="https://dl.dropboxusercontent.com/s/9i5kuy33tl83h0a/9.png" width="50%" height="50%">
     <h2>Utilisation</h2>
     <p>Il y a 4 sections dans l'application TBTP Chauffeur :</p>
     <h3>Planning</h3>
-    <img src="https://dl.dropboxusercontent.com/s/yksvm08q3ud55xw/10.png" width="30%" height="30%">
+    <img src="https://dl.dropboxusercontent.com/s/yksvm08q3ud55xw/10.png" width="50%" height="50%">
     <p>Il s'agit du planning du jour.</p>
     <p>Cette section permet de :&nbsp;</p>
     <p>Consulter le planning du jour</p>
@@ -59,7 +58,7 @@
     <p>NB : Vous pouvez quitter l'application. Mais, Il faut revenir &agrave; l'application d&egrave;s que vous &ecirc;tes connect&eacute; de nouveau &agrave; Internet pour lancer l'envoi des lettres de voiture.&nbsp;</p>
     <p>Attention : Il faut quand-m&ecirc;me verifier que les lettres de voiture ont &eacute;t&eacute; bien envoy&eacute;es dans la section Calendrier .</p>
     <h3>Profile</h3>
-    <img src="https://dl.dropboxusercontent.com/s/mldmh1kz2r2g0y0/11.png" width="30%" height="30%">
+    <img src="https://dl.dropboxusercontent.com/s/mldmh1kz2r2g0y0/11.png" width="50%" height="50%">
     <p>Dans cette section, vous pouvez consulter vos documents.</p>
     <h4>Android</h4>
     <p>Pour ouvrir ou bien t&eacute;l&eacute;charger un document vous avez besoin d'une application capable d'ouvrir les documents PDF.</p>
@@ -67,16 +66,14 @@
     <p>Si vous voulez consulter les documents vous pouvez ouvrir les documents directement dans l'application.</p>
     <p>Si vous voulez telecharger les documents il faut les ouvrir dans une application externe.</p>
     <h3>Calendrier</h3>
-    <img src="https://dl.dropboxusercontent.com/s/kyb6tey74y6lgh9/12.png" width="30%" height="30%">
+    <img src="https://dl.dropboxusercontent.com/s/kyb6tey74y6lgh9/12.png" width="50%" height="50%">
     <p>Dans cette section vous pouvez consulter les anciens planning et les lettres de voiture d&eacute;j&agrave; envoy&eacute;es.<br /><br />Vous pouvez aussi envoyer des lettres de voitures des anciens planning.</p>
     <p>Cette section est disponible si vous avez un acc&eacute;s &agrave; Internet seulement.</p>
     <p>Il ne faut pas quitter l'application avant le bon envoi des lettres de voiture.</p>
     <p>Eviter de stresser l'application et n'envoyez pas plusieurs lettres de voiture en m&ecirc;me temps.</p>
-    <p>&nbsp;</p>
     <h3>Documents Vehicule</h3>
-    <img src="https://dl.dropboxusercontent.com/s/7po6fjko116z2or/13.png" width="30%" height="30%">
+    <img src="https://dl.dropboxusercontent.com/s/7po6fjko116z2or/13.png" width="50%" height="50%">
     <p>Dans cette section, vous pouvez consulter les documents du vehicule et de remorque selon le planning du jour.</p>
-    <h4>&nbsp;</h4>
 </body>
 
 </html>
